--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,10 @@ matplotlib
 audio_recorder_streamlit
 langchain_openai
 gtts
+wavfile
+PromptTemplate
+OpenAIEmbeddings
+ChatOpenAI
+RecursiveCharacterTextSplitter
+FAISS
+RetrievalQA
