--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,196 @@
-requests
-xmltodict
-openai
-pandas
-numpy
-streamlit
-streamlit_chat
-Chroma
-load_dotenv
-TextLoader
-langchain_community
-matplotlib
-audio_recorder_streamlit
-langchain_openai
-gtts
-wavfile
+aiofiles==23.2.1
+aiohappyeyeballs==2.4.3
+aiohttp==3.11.7
+aiosignal==1.3.1
+altair==5.4.1
+annotated-types==0.7.0
+anyio==4.6.2.post1
+asgiref==3.8.1
+aspose-pdf==24.11.0
+async-timeout==4.0.3
+atomicwrites==1.4.1
+attrs==24.2.0
+audio-recorder-streamlit==0.0.10
+AudioRecorder==0.1
+backoff==2.2.1
+bcrypt==4.2.1
+beautifulsoup4==4.12.3
+blinker==1.9.0
+build==1.2.2.post1
+cachetools==5.5.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
+Chroma==0.2.0
+chroma-hnswlib==0.7.6
+chromadb==0.5.20
+click==8.1.7
+colorama==0.4.6
+coloredlogs==15.0.1
+contourpy==1.3.0
+crewai==0.5.0
+cycler==0.12.1
+dataclasses-json==0.6.7
+Deprecated==1.2.15
+diskcache==5.6.3
+distlib==0.3.9
+distro==1.9.0
+durationpy==0.9
+entrypoints==0.4
+exceptiongroup==1.2.2
+faiss-cpu==1.9.0.post1
+fastapi==0.115.5
+ffmpy==0.4.0
+filelock==3.16.1
+Flask==3.1.0
+flatbuffers==24.3.25
+fonttools==4.54.1
+frozenlist==1.5.0
+fsspec==2024.10.0
+gitdb==4.0.11
+GitPython==3.1.43
+google-auth==2.36.0
+googleapis-common-protos==1.66.0
+gradio==4.44.1
+gradio_client==1.3.0
+greenlet==3.1.1
+grpcio==1.68.0
+gTTS==2.5.4
+h11==0.14.0
+httpcore==1.0.6
+httptools==0.6.4
+httpx==0.27.2
+httpx-sse==0.4.0
+huggingface-hub==0.26.2
+humanfriendly==10.0
+idna==3.10
+importlib_metadata==8.5.0
+importlib_resources==6.4.5
+itsdangerous==2.2.0
+Jinja2==3.1.4
+jiter==0.7.1
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+kiwisolver==1.4.7
+kubernetes==31.0.0
+lan==0.0.2
+langchain==0.1.14
+langchain-community==0.0.38
+langchain-core==0.1.53
+langchain-openai==0.1.1
+langchain-text-splitters==0.0.2
+langchainhub==0.1.21
+langsmith==0.1.145
+llama_cpp_python==0.3.2
+lxml==5.3.0
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+marshmallow==3.23.1
+matplotlib==3.9.2
+mdurl==0.1.2
+mmh3==5.0.1
+monotonic==1.6
+more-itertools==10.5.0
+mpmath==1.3.0
+multidict==6.1.0
+mypy-extensions==1.0.0
+narwhals==1.13.5
+numpy==1.26.4
+oauthlib==3.2.2
+onnxruntime==1.19.2
+openai==1.14.3
+opentelemetry-api==1.28.2
+opentelemetry-exporter-otlp-proto-common==1.28.2
+opentelemetry-exporter-otlp-proto-grpc==1.28.2
+opentelemetry-instrumentation==0.49b2
+opentelemetry-instrumentation-asgi==0.49b2
+opentelemetry-instrumentation-fastapi==0.49b2
+opentelemetry-proto==1.28.2
+opentelemetry-sdk==1.28.2
+opentelemetry-semantic-conventions==0.49b2
+opentelemetry-util-http==0.49b2
+orjson==3.10.11
+overrides==7.7.0
+packaging==23.2
+pandas==2.2.3
+pillow==10.4.0
+pipenv==2024.4.0
+platformdirs==4.3.6
+pluggy==0.13.1
+posthog==3.7.4
+propcache==0.2.0
+protobuf==5.28.3
+py==1.11.0
+pyarrow==18.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+PyAudio==0.2.14
+pydantic==2.9.2
+pydantic-settings==2.6.1
+pydantic_core==2.23.4
+pydeck==0.9.1
+pydub==0.25.1
+Pygments==2.18.0
+pyparsing==3.2.0
+PyPDF2==3.0.1
+PyPika==0.48.9
+pyproject_hooks==1.2.0
+pyreadline3==3.5.4
+pytest==5.2.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-multipart==0.0.17
+pytz==2024.2
+PyYAML==6.0.2
+referencing==0.35.1
+regex==2024.11.6
+requests==2.32.3
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rich==13.9.4
+rpds-py==0.21.0
+rsa==4.9
+ruff==0.7.3
+semantic-version==2.10.0
+shellingham==1.5.4
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.1
+soupsieve==2.6
+SQLAlchemy==2.0.36
+starlette==0.41.2
+streamlit==1.40.1
+streamlit-audiorecorder==0.0.6
+streamlit-chat==0.1.1
+sympy==1.13.3
+tenacity==8.5.0
+texts==0.1
+tiktoken==0.8.0
+tokenizers==0.21.0
+toml==0.10.2
+tomli==2.2.1
+tomlkit==0.12.0
+toolz==1.0.0
+tornado==6.4.1
+tqdm==4.67.0
+typer==0.13.0
+types-requests==2.32.0.20241016
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+tzdata==2024.2
+unzip==1.0.0
+urllib3==2.2.3
+uvicorn==0.32.0
+virtualenv==20.28.0
+watchdog==6.0.0
+watchfiles==1.0.0
+wavfile==4.7.2
+wcwidth==0.2.13
+websocket-client==1.8.0
+websockets==12.0
+Werkzeug==3.1.3
+wrapt==1.17.0
+xmltodict==0.14.2
+yarl==1.18.0
+zipp==3.21.0
